# Color-Screen

./: AGENTS.md  AUTHORS  Doxyfile  Makefile.am  Makefile.in  NEWS  README.md  TODO  aclocal.m4  configure  configure.ac
.agents/: qtgui.md
examples/: 00271u-b.par  00271u.par  00272u.par  00274u.par  00275u.par  00278u-2.par  00278u.par  00279u.par  00280u.par  00281u.par  00287u-2.par  00288u.par  00295u.par  00299u.par  00303u.par  00304u.par  00307u.par  00309u.par  00310u.par  00315u.par  00316u.par  00319u.par  00320u.par  00328u.par  00332u.par  00334u.par  00340u.par  00342u.par  00351u.par  00357u.par  00359u.par  00373u.par  00376u.par  00381u.par  00382u.par  00388u.par  00398u.par  00402u.par  00404u.par  00412u-a.par  (+17 more)
examples/amcolony/: .Makefile.am.swp  .l.swp  .par.tif  00418u.par  Makefile.am  Makefile.in  dolist.sh  download.sh  list  ll  master-pnp-matpc-00200-00272u.par  master-pnp-matpc-00200-00273u.par  master-pnp-matpc-00200-00274u.par  master-pnp-matpc-00200-00277u.par  master-pnp-matpc-00200-00278u.par  master-pnp-matpc-00200-00279u.par  master-pnp-matpc-00200-00280u.par  master-pnp-matpc-00200-00281u.par  master-pnp-matpc-00200-00283u.par  master-pnp-matpc-00200-00284u.par  master-pnp-matpc-00200-00285u.par  master-pnp-matpc-00200-00286u.par  master-pnp-matpc-00200-00287u.par  master-pnp-matpc-00200-00288u.par  master-pnp-matpc-00200-00289u.par  master-pnp-matpc-00200-00291u.par  master-pnp-matpc-00200-00296u.par  master-pnp-matpc-00300-00306u.par  master-pnp-matpc-00300-00307u.par  master-pnp-matpc-00300-00310u.par  master-pnp-matpc-00300-00312u.par  master-pnp-matpc-00300-00313u.par  master-pnp-matpc-00300-00314u.par  master-pnp-matpc-00300-00315u.par  master-pnp-matpc-00300-00318u.par  master-pnp-matpc-00300-00319u.par  master-pnp-matpc-00300-00320u.par  master-pnp-matpc-00300-00323u.par  master-pnp-matpc-00300-00325u.par  master-pnp-matpc-00300-00326u.par  (+94 more)
gtkimageviewer-0.9.3/: COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  SConstruct  TODO  aclocal.m4  configure  configure.in  gtk-image-viewer-fixed.c  gtkimageviewer-2.0.pc.in
gtkimageviewer-0.9.3/docs/: Makefile.am  Makefile.in
gtkimageviewer-0.9.3/docs/tutorial/: Makefile.am  Makefile.in  gtkimageviewer_tutorial.txt
gtkimageviewer-0.9.3/examples/: Makefile  SConscript  agg-circles.cc  agg-lion.cc  cairo-circles  cairo-circles.c  circle.c  mandelbrot  mandelbrot.c  test-track  test-track.c  test_file  test_file.c  test_img.ppm  test_scroll  test_scroll.c
gtkimageviewer-0.9.3/src/: Makefile.am  Makefile.in  SConscript  gtk-image-viewer-private.h  gtk-image-viewer.gob  gtk-image-viewer.h  p
images/: Makefile.am  Makefile.in
notes/: eversmart.icc  (+6 more)
src/colorscreen/testsuite/: Makefile.am  Makefile.in  defs.sh  dufaycolor_dt_captureone_export.sh  dufaycolor_dt_captureone_export.test  dufaycolor_nikon_coolsan9000ED_4000DPI_raw.sh  dufaycolor_nikon_coolsan9000ED_4000DPI_raw.tif
src/gtkgui/: Makefile.am  Makefile.in  barveni.C  barveni.glade  barveni.in  barvenirgb.in  config.h.in  gtk-image-viewer-private.h  gtk-image-viewer.c  gtk-image-viewer.h  gtkgui.C  gtkgui.glade  regenerate.sh  viewer-patch
src/libcolorscreen/: ImageData.java  Makefile.am  Makefile.in  analyze-base-worker.h  analyze-base.C  analyze-base.h  analyze-dufay.C  analyze-dufay.h  analyze-paget.C  analyze-paget.h  analyze-scanner-blur.C  analyze-strips.C  analyze-strips.h  backlight-correction.C  backlight-correction.h  bitmap.h  bspline.h  color.C  config.h.in  cubic-interpolate.h  cz_cuni_mff_java_digitalColoring_interfaceWithC_ImageData.C  deconvolute.C  deconvolute.h  deconvolve.C  deconvolve.h  demosaic.h  denoise.C  denoise.h  dj_fft.h  dufaycolor.C  dufaycolor.h  fft.C  fft.h  finetune-int.h  finetune.C  gaussian-blur.h  gsl-solver.h  gsl-utils.C  gsl-utils.h  has-regular-screen.C  (+83 more)
src/libcolorscreen/include/: analyze-base.h  analyze-dufay.h  analyze-paget.h  analyze-scanner-blur.h  backlight-correction-parameters.h  backlight-correction.h  base.h  bitmap.h  color.h  colorscreen-config.h.in  colorscreen.h  cow-vector.h  detect-regular-screen-parameters.h  dllpublic.h  dufaycolor.h  finetune.h  histogram.h  imagedata.h  lens-correction.h  lens-warp-correction-parameters.h  matrix.h  mesh.h  mtf-parameters.h  paget.h  patches.h  precomputed-function.h  progress-info.h  render-fast.h  render-interpolate.h  render-parameters.h  render-scr-detect.h  render-superposeimg.h  render-to-scr.h  render-type-parameters.h  render.h  scanner-blur-correction-parameters.h  scr-detect-parameters.h  scr-detect.h  scr-to-img-parameters.h  scr-to-img.h  (+12 more)
src/qtgui/: AdaptiveSharpeningChart.cpp  AdaptiveSharpeningChart.h  AdaptiveSharpeningWorker.cpp  AdaptiveSharpeningWorker.h  BacklightChartWidget.cpp  BacklightChartWidget.h  CIEChartWidget.cpp  CIEChartWidget.h  CMakeLists.txt  CapturePanel.cpp  CapturePanel.h  ColorOptimizerWorker.cpp  ColorOptimizerWorker.h  ColorPanel.cpp  ColorPanel.h  ColorUtils.h  ContactCopyPanel.cpp  ContactCopyPanel.h  CoordinateOptimizationWorker.cpp  CoordinateOptimizationWorker.h  CoordinateTransformer.cpp  CoordinateTransformer.h  DeformationChartWidget.cpp  DeformationChartWidget.h  DetectScreenWorker.cpp  DetectScreenWorker.h  EmulsionPanel.cpp  EmulsionPanel.h  FieldLevelingWorker.cpp  FieldLevelingWorker.h  FinetuneImagesPanel.cpp  FinetuneImagesPanel.h  FinetuneMisregisteredWorker.cpp  FinetuneMisregisteredWorker.h  FinetuneWorker.cpp  FinetuneWorker.h  FlatFieldWorker.cpp  FlatFieldWorker.h  FlowLayout.cpp  FlowLayout.h  (+75 more)
testsuite/: Makefile.am  Makefile.in  checkerboard.tif  defs.sh  dufaycolor_dt_captureone_export.test  dufaycolor_nikon_coolsan9000ED_4000DPI_raw-finetune.test  dufaycolor_nikon_coolsan9000ED_4000DPI_raw-nomesh.par  dufaycolor_nikon_coolsan9000ED_4000DPI_raw.test  dufaycolor_nikon_coolsan9000ED_4000DPI_raw_sky-nomesh.par  dufaycolor_nikon_coolsan9000ED_4000DPI_raw_sky.tif  empty.par  render-original.test  slanted-austraia-hurley-esf.txt  slanted-austraia-hurley-lsf.txt  slanted-austraia-hurley-mtf.txt  slanted-austraia-hurley.tif  slanted-edge.test  unittests.test
(+69 files in other folders)
